# 2d3d

./: .gitignore  CMakeLists.txt  FindOSMesa.cmake  OAR.354.stderr  README.html  cmake_install.cmake  compute_compact  compute_dictionary  compute_matrix  compute_projectors  compute_vlat  config.properties  dico_xsci  evalindex.sh  evalindex_xsci  extract_descriptors  nohup.out  out.txt  run.sh  similarity_server
src/: compute_compact.cpp  compute_dictionary.cpp  compute_matrix.cpp  compute_projectors.cpp  compute_vlat.cpp  create_thumbnails.cpp  docid_to_path.cpp  extract_descriptors.cpp  free_memory.cpp  index.html  similarity_search.cpp  similarity_server.cpp
src/common/: 2D3D.cpp  2D3D.h  Renderer3D.cpp  Renderer3D.h  config_reader.cpp  config_reader.h  multithread.cpp  multithread.h  tools.cpp  tools.h  vlat.cpp  vlat.h
src/retin/feature/color/: ImageColor.cpp  ImageColor.h  ImageEqualization.cpp  ImageEqualization.h  ImageProcessing.h  ImageResample.h
src/retin/feature/depthimages/: DepthCamera.h  DepthImages.cpp  DepthImages.h  DepthImagesGenerator.java  ModuleInitialization.java  NativeDepthImagesFeatureGenerator.cpp  NativeDepthImagesFeatureGenerator.h
src/retin/feature/dfeat/: AbstractDaveFeature.cpp  AbstractDaveFeature.h  DaveDSift.cpp  DaveDSift.h  DaveFastSift.cpp  DaveFastSift.h  DaveFeature.h  DaveFeature.java  DaveGradient.c  DaveGradient.h  DaveHog.cpp  DaveHog.h  DavePoem.cpp  DavePoem.h  DaveRgb.cpp  DaveRgb.h  DfeatTables.java  ModuleInitialization.java  NativeDaveFeatureGenerator.cpp  NativeDaveFeatureGenerator.h  NativeDaveFeatureGenerator.java
src/retin/feature/vlat/: AbstractVlatBuilder.h  AbstractVlatCluster.h  Bag.cpp  Bag.h  CwPcaVlatBuilder.cpp  CwPcaVlatBuilder.h  CwPcaVlatBuilder.java  CwPooledVlatBuilder.cpp  CwPooledVlatBuilder.h  CwPooledVlatBuilder.java  EwPooledVlatBuilder.cpp  EwPooledVlatBuilder.h  EwPooledVlatBuilder.java  FastPackedVlat.cpp  FastPackedVlat.h  ModuleInitialization.cpp  ModuleInitialization.h  ModuleInitialization.java  PackedVlat.cpp  PackedVlat.h  PackedVlatBuilder.cpp  PackedVlatBuilder.h  PackedVlatBuilder.java  PackedVlatDocument.cpp  PackedVlatDocument.h  PackedVlatDocument.java  Pca.cpp  Pca.h  Pca.java  ProjectedPcaVlatBuilder.cpp  ProjectedPcaVlatBuilder.h  ProjectedPcaVlatBuilder.java  ProjectedVlatBuilder.cpp  ProjectedVlatBuilder.h  ProjectedVlatBuilder.java  SparseVlatBuilder.cpp  SparseVlatBuilder.h  SparseVlatBuilder.java  StandardPcaVlatBuilder.cpp  StandardPcaVlatBuilder.h  (+8 more)
src/retin/toolbox/algebra/: algebra.h  kpca.cpp  kpca.h  matrix.h  matrix_double.c  matrix_double.h  matrix_float.c  pca.cpp  pca.h  vector.h  vector_double.c  vector_double.h  vector_short.c  vector_short.h  vector_uchar.c  vector_uchar.h
src/retin/toolbox/codec3d/: Codec3D.cpp  Codec3D.h  Codec3DOFF.cpp  Codec3DOFF.h  Codec3DPLY.cpp  Codec3DPLY.h
src/retin/toolbox/codec3d/ply/: ply.cpp  ply.h
src/retin/toolbox/core/: SharedMatrix.cpp  SharedMatrix.h  arrays.h  auto_array_ptr.h  cache_queue.h  core.h  system.h  thread_pool.h  thread_pool_valider.h  work_pool.h  work_queue.h  work_runnable.h  work_set.h  work_task.h
src/retin/toolbox/core/sharedmem/: matrix_reader.cpp  matrix_reader.h
src/retin/toolbox/document/: BoxLabel.cpp  BoxLabel.h  BoxLabel.java  BytesMatrix.cpp  BytesMatrix.h  BytesMatrix.java  Document.cpp  Document.h  Document.java  FeatureMatrix.cpp  FeatureMatrix.h  FeatureMatrix.java  FileName.cpp  FileName.h  FileName.java  Filter.cpp  Filter.h  Filter.java  FloatMatrix.cpp  FloatMatrix.h  FloatMatrix.java  Flow2D.cpp  Flow2D.h  Flow2D.java  GlobalLabel.cpp  GlobalLabel.h  GlobalLabel.java  GridIntegralImage.cpp  GridIntegralImage.h  GridIntegralImage.java  ImageFile.cpp  ImageFile.h  ImageFile.java  IndexMatrix.cpp  IndexMatrix.h  IndexMatrix.java  IntegralImage.cpp  IntegralImage.h  IntegralImage.java  Labels.cpp  (+33 more)
src/retin/toolbox/document/basic/: Double.cpp  Double.h  Feature.cpp  Feature.h  Feature.java  Float.cpp  Float.h  Indexes.cpp  Indexes.h  Indexes.java  Integer.cpp  Integer.h  Keypoint.cpp  Keypoint.h  Keypoint.java  NativePointer.cpp  NativePointer.h  NativePointer.java  Polygon.cpp  Polygon.h  SparseVector.cpp  SparseVector.h  SparseVector.java  String.cpp  String.h  Text.cpp  Text.h  Text.java  Vector3d.cpp  Vector3d.h
src/retin/toolbox/document/buffer/: NativeDoubleBuffer.cpp  NativeDoubleBuffer.h  NativeDoubleBuffer.java  NativeFloatBuffer.cpp  NativeFloatBuffer.h  NativeFloatBuffer.java
src/retin/toolbox/document/list/: ArrayList.cpp  ArrayList.h  BytesList.cpp  BytesList.h  BytesList.java  FeatureList.cpp  FeatureList.h  FeatureList.java  FiltersList.cpp  FiltersList.h  FiltersList.java  IndexesList.cpp  IndexesList.h  IndexesList.java  KeypointList.cpp  KeypointList.h  KeypointList.java  List.h  StringList.cpp  StringList.h  StringList.java
src/retin/toolbox/document/serialization/: BinaryInputSerializer.cpp  BinaryInputSerializer.h  BinaryOutputSerializer.cpp  BinaryOutputSerializer.h  JNIInputSerializer.cpp  JNIInputSerializer.h  JNIOutputSerializer.cpp  JNIOutputSerializer.h  Java.cpp  Java.h  Java.java  JavaTraits.h  JsonWriter.java  Jsonable.java  ObjectFactory.h  Serializable.cpp  Serializable.h  SerializableObjectFactory.cpp  SerializableObjectFactory.h  Serializers.h  XMLInputSerializer.cpp  (+2 more)
src/retin/toolbox/imcodec/: ImageCodec.cpp  ImageCodec.h  ImageCodecJPEG.cpp  ImageCodecJPEG.h  ImageCodecPBM.cpp  ImageCodecPBM.h  ImageCodecPNG.cpp  ImageCodecPNG.h
src/retin/toolbox/nativegenerator/: CompEig.cpp  CompEig.h  CompEig.java  ModuleInitialization.java  NativeDocumentGenerator.cpp  NativeDocumentGenerator.h  NativeDocumentGenerator.java  NativeDocumentGeneratorRegister.java  NativeFeatureListGenerator.cpp  NativeFeatureListGenerator.h  NativeFeatureListGenerator.java  NativeGeneratorTables.java
src/retin/toolbox/quantization/: AbstractCluster.cpp  AbstractCluster.h  AbstractQuantizer.cpp  AbstractQuantizer.h  DiagGmmQuantizer.cpp  DiagGmmQuantizer.h  ElbgQuantizer.cpp  ElbgQuantizer.h  ElbgQuantizer.java  NaiveSplittingQuantizer.cpp  NaiveSplittingQuantizer.h
